# xnano

./: .gitignore  Cargo.toml  README.md
src/: config.rs  editor.rs  main.rs  spell.rs  ui.rs
